--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,18 @@ version = "0.1.0"
 authors = ["Roman Frołow <rofrol@gmail.com>"]
 
 [dependencies]
+serde = "1.0.24"
+serde_json = "1.0.8"
+
+slog = "2.1.1"
+slog-term = "2.1.1"
+
+actix = "0.3"
+actix-web = { git = "https://github.com/actix/actix-web" }
+futures = "0.1.17"
+
+dotenv = "0.9.0"
+
+juniper = "0.9.2"
+
+lazy_static = "1.0.0"
